# mas_domestic_robotics

mdr_planning/mdr_actions/mdr_manipulation_actions/mdr_pickup_action/ros/launch/: pickup_client.launch
mdr_planning/mdr_actions/mdr_manipulation_actions/mdr_pickup_action/ros/scripts/: pickup_client
mdr_planning/mdr_actions/mdr_manipulation_actions/mdr_place_action/ros/launch/: place_client.launch
mdr_planning/mdr_actions/mdr_manipulation_actions/mdr_place_action/ros/scripts/: place_client
mdr_planning/mdr_actions/mdr_navigation_actions/mdr_move_base_safe/ros/launch/: move_base_safe_client.launch
mdr_planning/mdr_actions/mdr_navigation_actions/mdr_move_base_safe/ros/scripts/: move_base_safe_client
mdr_planning/mdr_actions/mdr_perception_actions/mdr_perceive_plane_action/ros/launch/: perceive_plane_client.launch
mdr_planning/mdr_actions/mdr_perception_actions/mdr_perceive_plane_action/ros/scripts/: perceive_plane_client
mdr_planning/mdr_rosplan_interface/: package.xml
mdr_planning/mdr_rosplan_interface/ros/launch/: init_planning_problem.launch
mdr_planning/mdr_rosplan_interface/ros/scripts/: init_planning_problem
mdr_planning/mdr_rosplan_interface/ros/src/mdr_rosplan_interface/: action_client_base.py
mdr_planning/mdr_scenarios/mdr_robocup_tasks/mdr_storing_groceries/: CMakeLists.txt  package.xml  setup.py
mdr_planning/mdr_scenarios/mdr_robocup_tasks/mdr_storing_groceries/common/: default_problem.yaml  domain.pddl
mdr_planning/mdr_scenarios/mdr_robocup_tasks/mdr_storing_groceries/launch/: storing_groceries.launch
