<?xml version="1.0"?>
<package>
  <name>mdr_storing_groceries</name>
  <version>0.0.1</version>
  <description>The mdr_storing_groceries package</description>
  <maintainer email="robotics@inf.h-brs.de">MAS robotics</maintainer>
  <license>GPLv3</license>

  <author email="aleksandar.mitrevski@h-brs.de">Alex Mitrevski</author>

  <build_depend>catkin</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mdr_rosplan_interface</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>mdr_rosplan_interface</run_depend>
</package>
